use switch expressions
Lets the compiler check that all cases are covered. No more unreachable
default cases needed.